Rename method in EventsTestUtils